# rag-tool-test

./: Cargo.toml  README.md
src/: main.rs
src/tools/: add.rs  divide.rs  lookup.rs  mod.rs  multiply.rs  subtract.rs
src/utils/: agent.rs  embed.rs  index.rs  mod.rs
