[package]
name = "rag-tool-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
env_logger = "0.11.6"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.rig-core]
git = "https://github.com/0xPlaygrounds/rig"
features = ["derive"]
